@startuml
class com.example.myfinalproject.Adapters.ProfessionAdapter {
- List<Profession> professions
- List<Profession> filteredProfessions
- Context context
- ProfessionClickListener listener
+ ProfessionViewHolder onCreateViewHolder(ViewGroup,int)
+ void onBindViewHolder(ProfessionViewHolder,int)
+ int getItemCount()
+ void filterByCategory(String)
+ void filterByQuery(String)
}


class com.example.myfinalproject.Adapters.ProfessionAdapter$ProfessionViewHolder {
~ TextView tvProfessionName
~ MaterialCardView cardProfession
}

interface com.example.myfinalproject.Adapters.ProfessionAdapter$ProfessionClickListener {
~ void onProfessionClick(Profession)
}

class com.example.myfinalproject.Adapters.NotificationsAdminAdapter {
- List<NotificationAdmin> notificationsList
- OnNotificationClickListener listener
+ NotificationViewHolder onCreateViewHolder(ViewGroup,int)
+ void onBindViewHolder(NotificationViewHolder,int)
+ int getItemCount()
+ void updateData(List<NotificationAdmin>)
+ void removeNotification(NotificationAdmin)
}


interface com.example.myfinalproject.Adapters.NotificationsAdminAdapter$OnNotificationClickListener {
~ void onNotificationClick(NotificationAdmin)
}

class com.example.myfinalproject.Adapters.NotificationsAdminAdapter$NotificationViewHolder {
- TextView tvUserName
- TextView tvTimestamp
- TextView tvContent
- TextView tvType
- TextView tvReason
- MaterialCardView cardNotification
+ void bind(NotificationAdmin)
}


class com.example.myfinalproject.Adapters.ReviewAdapter {
- {static} String TAG
- List<Review> reviewList
- String userId
- ReviewCallback callback
+ ReviewViewHolder onCreateViewHolder(ViewGroup,int)
+ void onBindViewHolder(ReviewViewHolder,int)
+ int getItemCount()
}


class com.example.myfinalproject.Adapters.ReviewAdapter$ReviewViewHolder {
~ TextView tvUser
~ RatingBar rbReviewRating
~ ImageButton imgBtnEditReview
~ Button btnSaveChanges
}



com.example.myfinalproject.Adapters.Adapter <|-- com.example.myfinalproject.Adapters.ProfessionAdapter
com.example.myfinalproject.Adapters.ProfessionAdapter +.. com.example.myfinalproject.Adapters.ProfessionAdapter$ProfessionViewHolder
com.example.myfinalproject.Adapters.ViewHolder <|-- com.example.myfinalproject.Adapters.ProfessionAdapter$ProfessionViewHolder
com.example.myfinalproject.Adapters.ProfessionAdapter +.. com.example.myfinalproject.Adapters.ProfessionAdapter$ProfessionClickListener
com.example.myfinalproject.Adapters.Adapter <|-- com.example.myfinalproject.Adapters.NotificationsAdminAdapter
com.example.myfinalproject.Adapters.NotificationsAdminAdapter +.. com.example.myfinalproject.Adapters.NotificationsAdminAdapter$OnNotificationClickListener
com.example.myfinalproject.Adapters.NotificationsAdminAdapter +.. com.example.myfinalproject.Adapters.NotificationsAdminAdapter$NotificationViewHolder
com.example.myfinalproject.Adapters.ViewHolder <|-- com.example.myfinalproject.Adapters.NotificationsAdminAdapter$NotificationViewHolder
com.example.myfinalproject.Adapters.Adapter <|-- com.example.myfinalproject.Adapters.ReviewAdapter
com.example.myfinalproject.Adapters.ReviewAdapter +.. com.example.myfinalproject.Adapters.ReviewAdapter$ReviewViewHolder
com.example.myfinalproject.Adapters.ViewHolder <|-- com.example.myfinalproject.Adapters.ReviewAdapter$ReviewViewHolder
@enduml